Fixed keyboard not showing up on mobile (also finally found a way to test it on mobile locally)

--- a/styles.css
+++ b/styles.css
@@ -65,4 +65,5 @@ body {
   background: transparent;
   position: relative;
   caret-color: transparent;
+  outline: none;
 }
